# cpp-projects

./: .gitignore
game-development/circles/: CMakeLists.txt  info.txt
game-development/circles/src/: Game.cpp  Game.h
game-development/reverse-elementia/: CMakeLists.txt  info.txt
game-development/reverse-elementia/.github/workflows/: ci.yml
game-development/reverse-elementia/modules/game/: Game.ixx
game-development/reverse-elementia/src/: main.cpp
general/cmake-basics/: CMakeLists.txt  info.txt
networking/client-server-chat-application/: CMakeLists.txt
networking/client-server-chat-application/client/: CMakeLists.txt  main.cpp
networking/client-server-chat-application/networking/: CMakeLists.txt
networking/client-server-chat-application/networking/src/: base.cpp
networking/client-server-chat-application/server/: CMakeLists.txt  main.cpp
